Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,28 @@
 <h5>Středa, 27. 10. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová</strong>
+<strong>VE DNECH 28.-29.10. JE JÍDELNA ZAVŘENÁ</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							0,-
+						</span>
+</p>
+<p>
+<strong>Bramborová s uzeným masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Smažený hermelín s hranolkami a tatarkou</strong>
+<strong>Krůtí na kari s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Uzená krkovička se šťouchaným bramborem a cibulkami</strong>
+<strong>Těstoviny puttanesca s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
