Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -137,7 +137,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s ananasovou salsou, teply cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 139</li><li>Peceny filet z cerstveho mecouna a maslove ryby s ananasovou salsou, teply cockovy salat s paprikami, cuketami, maslovymi fazolemi a petrzelkou 175</li><li>Rostbif z hoveziho rostence s pikantni paprikovou salsou, pecene baby brambory, salatek 139</li><li>Grilovane jehneci kofte s okurkovymi tzatziki, zeleninovy kuskus s bylinkami, salatek {L} 165</li><li>Kapustove placicky s muskatem a smazenou cibulkou, stouchane brambory, tatarska omacka {L} 139</li></ol>
+<ol><li>Peceny atlanticky hejk s brokolici a pestem ze susenych rajcat, zeleninova ryze, salatek 139</li><li>Zapecene ustrice s pestem ze susenych rajcat {3 ks}, brokolice, zeleninova ryze, salatek 179</li><li>Lasagne s hovezim masem, pecenymi paprikami, rajcaty a zelenymi bylinkami zapecene ve smetanove omacce, salatek {L} 139</li><li>Grilovane medailonky z panenske svickove s jablecno-zazvorovym catny, gratinovane brambory se syrem, salatek 175</li><li>Pecena cervena repa s balzamikem a balkanskym syrem pohanka se smazenou cibulkou, sazene vejce, salatek 139</li></ol>
 </td>
 </tr>
 </table>
