--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Středa, 27. 10. 2021</h5>
+<h5>Čtvrtek, 28. 10. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>VE DNECH 28.-29.10. JE JÍDELNA ZAVŘENÁ</strong>
@@ -57,41 +57,10 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Středa 27.10.2021</div>
+<div class="nadpis">Čtvrtek 28.10.2021</div>
 <ul>
 <li class="polevka">
-<div class="polozka">300ml Gulášová polévka s čerstvou majoránku samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">39 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="polevka">
-<div class="polozka">300ml Gulášová polévka s čerstvou majoránku v menu <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
-<div class="cena">29 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">1. </span>150g Kuřecí prso ve sweet&amp;sour omáčce, bambusové výhonky, karotka, jasmínová rýže  <em title="Obiloviny obsahující lepek">1</em><em title="Sójové boby (sója)">6</em><em title="Mléko">7</em><em title="Sezamová semena (sezam)">11</em><em title="Oxid siřičitý a siřičitany">12</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, hořčičná omáčka, pečené grenaillle na bylinkách, polníček <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">3. </span>150g Portobello plněné ratatouille zeleninou a sýrem, vařené brambory s bylinkovým máslem, míchaný salát <em title="Mléko">7</em><em title="Hořčice">10</em></div>
-<div class="cena">145 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">5. </span>Brownie <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
-<div class="cena">49 Kč</div>
-<div class="clear"></div>
-</li>
-<li class="jidlo">
-<div class="polozka"><span class="poradi">6. </span>Kokosový puding s malinovým přelivem  (bez lepku a laktózy) </div>
-<div class="cena">59 Kč</div>
+<div class="polozka">Zavřeno - státní svátek. </div>
 <div class="clear"></div>
 </li>
 </ul>
@@ -105,16 +74,19 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Špenátový krém s vařeným vejcem,zakysanou smetanou a tortilovými chipsy</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Smažené holandské řízky, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí kýta na slanině, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Šenkýrenská bašta- uzená šunka od kosti, šunková klobása a vepřová pečeně, kynuté houskové a bramborové knedlíky, dušené bílé zelí</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený květák, vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s červenou cibulí a klobásou, pečené brambory s kmínem, tatarka</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Dorůžova pečená vepřová panenka, grilovaná karotka, lilek a cuketa, hráškové pyré s máslem, vařené vejce</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Katův vepřový šleh, smažené bramborové hranolky</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny ala carbonara s kuřecím masem, anglickou slaninou a smetanou, strouhaný parmazán</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně gratinovaný šunkou a sýrem,vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstovinový salát promíchaný majonézovým dresinkem, šunkou, sýrem, ředkvičkami a tomaty, strouhaný parmazán, rukola</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou, nudlemi a játrovou rýží</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Gulášová</td><td class="menuPrice">37,-</td></tr></tbody>
+</table><table class="table">
+<tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Znojemská hovězí pečeně, dušená rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené rizoletky plněné mletým masem a špenátem, vařené brambory s máslem a šnitlíkem, citron </td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dušené vepřové kostky po srbsku, dušená rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená vepřová kotleta bez kosti obalená v parmazánové strouhance, bramborová kaše s máslem, citrón</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">Low carb:</td><td class="menuName">Nízkosacharidová dieta: 150g Filírovaná kuřecí prsa na zeleninovém ragú v tomatové omáčce, smažené celerové hranolky, volské oko</td><td class="menuPrice">149,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s kuřecím masem, bazalkovým pestem a rajčaty, strouhaný parmazán </td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné houbové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů se zeleninou, sušenými rajčaty a olivami, plátkovaná vepřová panenka, vařené vejce</td><td class="menuPrice">133,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
+<h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">wi-fi heslo: www.senkyrna.cz</h5><tr><td class="menuWeight"></td><td class="menuName">Staň se fanouškem našeho instagramu "senkyrna7" a sleduj naše slevové akce. </td><td class="menuPrice"></td></tr></tbody></table></table>
@@ -160,6 +132,11 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Státní svátek - Den vzniku samostatného československého státu</td><td class="pricem"></td><tr></tr></tr></table>
 </td>
 </tr>
 </table>
