Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 31. 10. 2021</h5>
+<h5>Pondělí, 01. 11. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>VE DNECH 28.-29.10. JE JÍDELNA ZAVŘENÁ</strong>
@@ -57,9 +57,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 31.10.2021</div>
+<div class="nadpis">Pondělí 1.11.2021</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -70,16 +70,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Čočková s uzeným masem a karotkou</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramboračka s hříbky</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Těstoviny linguine s boloňským ragú, strouhaný sýr</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">139,-</td></tr><tr><td class="menuWeight">Středa</td><td class="menuName">Sleduj náš instagramový profil "Senkyrna7" a ve středu máš po celý den: 150g  Smažené řízky z vepřové panenky, bramborový salát    77,-</td><td class="menuPrice">Středa</td></tr><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené kuřecí stehno s nádivkou, vařené brambory s máslem a šnitlíkem, česnekový dip</td><td class="menuPrice">132,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cmunda po kaplicku (uzené maso se zelím v bramboráku)</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 200g Sekaný masový biftek na grilu, hříbková smetanová omáčka, grusetky promíchané parmazánem</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Smažená vinná klobása, bramborová kaše s máslem, kyselá okurka</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně, pikantní kovbojské fazole, smažené bramborové hranolky</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Kapsa z kuřecích prsou na grilu plněná moravským uzeným, sýrem a brokolicí, jemná smetanová pepřová omáčka, smažené bramborové plátky</td><td class="menuPrice">153,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listů a zeleniny ochucený olivovým olejem, smažené kuřecí stripsy, tortilový chips</td><td class="menuPrice">133,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí pečeně na houbách, kynuté houskové knedlíky</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Vepřová plec po cikánsku, dušená jasmínová rýže</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu s anglickou slaninou a červenou cibulí, smažené bramborové plátky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažená kuřecí prsa obalená v cornflakes, vařené brambory s máslem a šnitlíkem, citrón</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta.150g Steak z vepřového karé, fazolové lusky se slaninou, sázené vejce na šunce</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné houbové omáčce, restované špecle</td><td class="menuPrice">137,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Kuřecí soté s chilli a zeleninou, smažené bramborové hranolky</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Náš mletý dvojitý burger 100g+100g v bulce s cibulí, volské oko, listové saláty, kyselá okurka, beranní roh, chilli dresink, smažené hranolky, tatarka</td><td class="menuPrice">159,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Míchaný zeleninový salát s citronovým dresingem, smažené kuřecí stripsy, vařené vejce</td><td class="menuPrice">133,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Nepečený piškotový řez s broskvemi a šlehačkou</td><td class="menuPrice">55,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -132,7 +129,7 @@ a vanilkovým Crème fraîche	</td>
 </tr>
 <tr>
 <td>
-<table class="dm"></table>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Hráškový krém s máslovými krutony 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřo - knedlo -zelo 1a,3,7,12</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažený kuřecí řízek Savoj sypaný šunkou a sýrem s gratinovanými brambory se smetanou a trhaným salátem 1a,3,7</td><td class="pricem">139 Kč</td><tr><tr><td class="amount">350g</td><td class="title">Kotlíkový guláš s klobásou, houbami, cibulkou a naším chlebem 1ab</td><td class="pricem">129 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
