Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -177,7 +177,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny atlanticky hejk s brokolici a pestem ze susenych rajcat, zeleninova ryze, salatek 139</li><li>Zapecene ustrice s pestem ze susenych rajcat {3 ks}, brokolice, zeleninova ryze, salatek 179</li><li>Lasagne s hovezim masem, pecenymi paprikami, rajcaty a zelenymi bylinkami zapecene ve smetanove omacce, salatek {L} 139</li><li>Grilovane medailonky z panenske svickove s jablecno-zazvorovym catny, gratinovane brambory se syrem, salatek 175</li><li>Pecena cervena repa s balzamikem a balkanskym syrem pohanka se smazenou cibulkou, sazene vejce, salatek 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s bylinkovou jogurtovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstve prazmy s bylinkovou jogurtovou omackou, korenena ryze s beluga cockou, salatek 175</li><li>Burrito s mexickym carnitas {trhane veprove} a goudou, pecene baby brambory, jogurtovy dip, salatek {L} 139</li><li>Smazeny sekany teleci rizek s goudou a petrzelkou, bramborovy salat s okurkami, vajickem, petrzelkou a creme fraiche, citron {L} 169</li><li>Bramborove gnocchi s brynzou a restovanymi hnedymi zampiony na cibulce, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
