Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,31 +7,24 @@
 <h5>Pondělí, 01. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>VE DNECH 28.-29.10. JE JÍDELNA ZAVŘENÁ</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							0,-
-						</span>
-</p>
-<p>
-<strong>Bramborová s uzeným masem</strong>
+<strong>Fazolová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Krůtí na kari s rýží</strong>
+<strong>Vepřový perkelt s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny puttanesca s parmazánem</strong>
+<strong>Těstoviny s omáčkou ze sušených rajčat a cukety s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							125,-
 						</span>
 </p>
 <p>
