--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,24 +7,24 @@
 <h5>Úterý, 02. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Fazolová</strong>
+<strong>Rybí s kari a cuketou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Vepřový perkelt s rýží</strong>
+<strong>Svíčková na smetaně s houskovým knedlíkem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							127,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s omáčkou ze sušených rajčat a cukety s parmazánem</strong>
+<strong>Míchaný salát s grilovanými kuřecími křidélky</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							125,-
+							127,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 2.11.2021</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Míša dort bez lepku </div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Jáhlový puding se švestkami bez lepku a laktózy</div>
+<div class="cena">65 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Arašídový košíček s čokoládou</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s uzeným masem samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Zelná polévka s uzeným masem s menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">29 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Krůtí nudličky v red curry omáčce, restovaná zelenina, jasmínová rýže, koriandr <em title="Ryby">4</em><em title="Podzemnice olejná (arašídy)">5</em><em title="Sójové boby (sója)">6</em><em title="Sezamová semena (sezam)">11</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Grilovaná vepřová krkovice, karamelizovaná cibule, houbový kuba <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>100g Grilovaný camembert, brusinková omáčka, vařené brambory, trhaný salát <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -130,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlantickeho hejka s bylinkovou jogurtovou omackou, korenena ryze s beluga cockou, salatek 139</li><li>Peceny filet z cerstve prazmy s bylinkovou jogurtovou omackou, korenena ryze s beluga cockou, salatek 175</li><li>Burrito s mexickym carnitas {trhane veprove} a goudou, pecene baby brambory, jogurtovy dip, salatek {L} 139</li><li>Smazeny sekany teleci rizek s goudou a petrzelkou, bramborovy salat s okurkami, vajickem, petrzelkou a creme fraiche, citron {L} 169</li><li>Bramborove gnocchi s brynzou a restovanymi hnedymi zampiony na cibulce, salatek {L} 139</li></ol>
+<ol><li>Filet z norskeho slede smazeny v tempura testicku, citron, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Indicke kari s krutim masem, pecenymi bataty, paprikami a kokosovym mlekem, jasminova ryze 139</li><li>Italske houbove rizoto s parmezanem, srncim rostbifem a lanyzovym olejem, salatek 169</li><li>Indicky dal ze zluteho hrachu s brokolici, zazvorem a ajowanem, sazene vejce, pohanka se smazenou cibulkou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
