Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -170,7 +170,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z norskeho slede smazeny v tempura testicku, citron, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Indicke kari s krutim masem, pecenymi bataty, paprikami a kokosovym mlekem, jasminova ryze 139</li><li>Italske houbove rizoto s parmezanem, srncim rostbifem a lanyzovym olejem, salatek 169</li><li>Indicky dal ze zluteho hrachu s brokolici, zazvorem a ajowanem, sazene vejce, pohanka se smazenou cibulkou, salatek 139</li></ol>
+<ol><li>Filet z norskeho slede smazeny v tempura testicku, citron, stouchane brambory s kapustou, salatek z cervene repy ( L ) 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Indicke kari s krutim masem, pecenymi bataty, paprikami a kokosovym mlekem, jasminova ryze 139</li><li>Italske houbove rizoto s parmezanem, srncim rostbifem a lanyzovym olejem, salatek 169</li><li>Indicky dal ze zluteho hrachu s brokolici, zazvorem a ajowanem, sazene vejce, pohanka se smazenou cibulkou, salatek 139</li></ol>
 </td>
 </tr>
 </table>
