Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -7,21 +7,21 @@
 <h5>Středa, 03. 11. 2021</h5>
 <span class="line"></span>
 <p>
-<strong>Rybí s kari a cuketou</strong>
+<strong>Mrkvová s celerem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Svíčková na smetaně s houskovým knedlíkem</strong>
+<strong>Smažená vinná klobása se šťouchaným bramborem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							135,-
+							129,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s grilovanými kuřecími křidélky</strong>
+<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
