Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -130,7 +130,7 @@ a vanilkovým Crème fraîche	</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z norskeho slede smazeny v tempura testicku, citron, stouchane brambory s kapustou, salatek z cervene repy ( L ) 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovym maslem, stouchane brambory s kapustou, salatek z cervene repy 169</li><li>Indicke kari s krutim masem, pecenymi bataty, paprikami a kokosovym mlekem, jasminova ryze 139</li><li>Italske houbove rizoto s parmezanem, srncim rostbifem a lanyzovym olejem, salatek 169</li><li>Indicky dal ze zluteho hrachu s brokolici, zazvorem a ajowanem, sazene vejce, pohanka se smazenou cibulkou, salatek 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronovym dresinkem {citronova stava, olivovy olej} a brokolici, cizrnovy hummus, salatek 139</li><li>Peceny filet z cerstve tresky s citronovym dresinkem a brokolici, cizrnovy hummus, salatek 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke cervene marinade se zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Jehneci predek peceny na cesneku a cibuli, zeleninove birjany z basmati ryze, okurkove tzatziki, salatek 169</li><li>Thajske kari s tempehem, hnedymi zampiony, gaj coj, kokosovym mlekem a arasidy, jasminova ryze 139</li></ol>
 </td>
 </tr>
 </table>
